[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/layouts/healthBar/healthbar_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/battle/HealthBar.gd" type="Script" id=2]
[ext_resource path="res://Scenes/layouts/healthBar/healthbar_theme_damage.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.996078, 0.352941, 0.352941, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.992157, 0.247059, 0.247059, 0 )

[node name="HealthBar" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarDamage" type="ProgressBar" parent="."]
margin_right = 28.0
margin_bottom = 4.0
theme = ExtResource( 3 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 0.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_right = 28.0
margin_bottom = 4.0
theme = ExtResource( 1 )
max_value = 0.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]
